<resources>

    <string name="app_name">WiFi Analyzer</string>
    <string name="app_settings">Settings</string>
    <string name="app_about">Build: %1$d. Version: %2$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_options">Options for %s</string>
    <string name="toast_home_removed">BSSID %1$s removed from the list of home networks.</string>
    <string name="toast_home_added">BSSID %1$s added to the list of home networks.</string>
    <string name="toast_ignore_removed">BSSID %1$s removed from the list of ignored networks.</string>
    <string name="toast_ignore_added">BSSID %1$s added to the list of ignored networks.</string>

    <string name="action_settings">Settings</string>
    <string name="nav_others">Others</string>
    <string name="nav_about">About</string>
    <string name="nav_donate">Donate</string>
    <string name="nav_spectrum">Spectrum</string>
    <string name="nav_scan">List</string>
    <string name="nav_recording">Recording</string>

    <string name="pref_cat_general">General</string>
    <string name="pref_cat_80211">802.11 Bands</string>
    <string name="pref_cat_recording">Recording</string>

    <string name="pref_theme_desc">Select the application appearance. You have to restart the app to see the effect.</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_band_desc">Change the frequency band \u2014 2.4/5 GHz</string>
    <string name="pref_band_title">WiFi Band</string>
    <string name="pref_freqchan_desc">Change the frequency units on x-axis in the Spectrum View</string>
    <string name="pref_freqchan_title">Units</string>
    <string name="pref_autorefresh_delay_desc">Time in seconds between successive WiFi scans. Actual delay will depend on your hardware.</string>
    <string name="pref_autorefresh_delay_title">Autorefresh Delay</string>
    <string name="pref_filter_spectrum_desc">Shows only 10 most powerful networks in the Spectrum Display for better readability.</string>
    <string name="pref_filter_spectrum_title">Filtered Spectrum</string>
    <string name="pref_rec_samples_desc">Number of scanning samples in a single recording session.</string>
    <string name="pref_rec_samples_title">Recording Samples</string>
    <string name="pref_rec_delay_desc">Time in seconds between each sample during recordings. Actual delay will depend on your hardware.</string>
    <string name="pref_rec_delay_title">Recording Delay</string>
    <string name="pref_max_channel_2G_desc">Highest allowable channel in 2.4 GHz band. Actual functionality will depend on your hardware and country.</string>
    <string name="pref_max_channel_2G_title">Allowable Channel (2.4 GHz)</string>
    <string name="pref_max_channel_5G_desc">Highest allowable channel in 5 GHz band. Actual functionality will depend on your hardware and country.</string>
    <string name="pref_max_channel_5G_title">Allowable Channel (5 GHz)</string>

    <string name="pref_theme_def" translatable="false">light</string>
    <string name="pref_autorefresh_delay_def" translatable="false">5</string>
    <string name="pref_filter_spectrum_def" translatable="false">true</string>
    <string name="pref_freqchan_def" translatable="false">MHz</string>
    <string name="pref_band_def" translatable="false">24</string>
    <string name="pref_max_channel_2G_def" translatable="false">13</string>
    <string name="pref_max_channel_5G_def" translatable="false">48</string>
    <string name="pref_rec_delay_def" translatable="false">5</string>
    <string name="pref_rec_samples_def" translatable="false">10</string>

    <string name="frag_scan_ssid" translatable="false">%s</string>
    <string name="frag_scan_count">AP Count: %d</string>
    <string name="frag_scan_bssid" translatable="false">%s</string>
    <string name="frag_scan_chanfr" translatable="false">Channel %1$d\n%2$d@%3$d MHz</string>
    <string name="frag_scan_chanfr_long" translatable="false">Ch %1$d\n%2$d@%3$d MHz\n%4$d@%5$d MHz</string>
    <string name="frag_scan_strength" translatable="false">%d dBm</string>
    <string name="frag_scan_apcapab">Capabilities</string>
    <string name="frag_scan_emptytext">No networks to show.\nSwipe from the top to reload.</string>
    <string name="frag_rec_channel" translatable="false">%d</string>

    <string name="butt_record">Record</string>
    <string name="butt_clear">New</string>
    <string name="butt_autoreload">Reload</string>
    <string name="butt_autofilter">Filter</string>

    <string name="snack_rec_stopped">Recording stopped.</string>
    <string name="snack_rec_started">Recording started. Screen will be kept on.</string>
    <string name="snack_clear_results">Deleting results.</string>
    <string name="snack_autoreload_started">Auto scanning started. Screen will be kept on.</string>
    <string name="toast_enabling_wifi">WiFi is disabled. Making it enabled.</string>

    <string name="delay_entries_1">as fast as possible</string>
    <string name="delay_entries_2">2 seconds</string>
    <string name="delay_entries_3">5 seconds</string>
    <string name="delay_entries_4">10 seconds</string>
    <string name="delay_entries_5">60 seconds</string>
    <string name="theme_entries_1">Light Material</string>
    <string name="theme_entries_2">Dark Material</string>
    <string name="dialog_options_2">Ignore this network</string>
    <string name="dialog_options_1">Add to home list</string>
    <string name="freqchan_entries_1">Channel number</string>
    <string name="band_entries_1">2.4 GHz</string>
    <string name="frag_rec_best_zero">Best channel so far: %1$d (after no samples)</string>
    <string name="frag_rec_best_one">Best channel so far: %1$d (after %2$d sample)</string>
    <string name="frag_rec_best_other">Best channel so far: %1$d (after %2$d samples)</string>
    <string name="frag_rec_best_few">Best channel so far: %1$d (after %2$d samples)</string>
    <string name="band_entries_2" translatable="false">5 GHz</string>
    <string name="freqchan_entries_2" translatable="false">MHz</string>
    <string name="freqchan_entries_3" translatable="false">GHz</string>
    <string name="action_close">Close</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="feedback_intro_text">Please describe the issue you are experiencing:</string>
    <string name="feedback_donation_success">Transaction was successful, thank you!</string>
    <string name="feedback_donation_cancelled">Transaction flow was cancelled, no money were transferred from your account</string>

</resources>
