<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_cat_general">
        <ListPreference
            android:entryValues="@array/theme_values"
            android:entries="@array/theme_entries"
            android:key="theme"
            android:defaultValue="@string/pref_theme_def"
            android:summary="@string/pref_theme_desc"
            android:title="@string/pref_theme_title">
        </ListPreference>
        <ListPreference
            android:entryValues="@array/freqchan_values"
            android:entries="@array/freqchan_entries"
            android:key="freqchan"
            android:defaultValue="@string/pref_freqchan_def"
            android:summary="@string/pref_freqchan_desc"
            android:title="@string/pref_freqchan_title">
        </ListPreference>
        <ListPreference
            android:entryValues="@array/delay_values"
            android:entries="@array/delay_entries"
            android:key="autorefresh_delay"
            android:defaultValue="@string/pref_autorefresh_delay_def"
            android:summary="@string/pref_autorefresh_delay_desc"
            android:title="@string/pref_autorefresh_delay_title">
        </ListPreference>
        <SwitchPreference
            android:key="filter_spectrum"
            android:defaultValue="@string/pref_filter_spectrum_def"
            android:summary="@string/pref_filter_spectrum_desc"
            android:title="@string/pref_filter_spectrum_title">
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_80211">
        <ListPreference
            android:entryValues="@array/band_values"
            android:entries="@array/band_entries"
            android:key="band"
            android:defaultValue="@string/pref_band_def"
            android:summary="@string/pref_band_desc"
            android:title="@string/pref_band_title">
        </ListPreference>
        <ListPreference
            android:entryValues="@array/channels_2G"
            android:entries="@array/channels_2G"
            android:key="max_channel_2G"
            android:defaultValue="@string/pref_max_channel_2G_def"
            android:summary="@string/pref_max_channel_2G_desc"
            android:title="@string/pref_max_channel_2G_title">
        </ListPreference>
        <ListPreference
            android:entryValues="@array/channels_5G"
            android:entries="@array/channels_5G"
            android:key="max_channel_5G"
            android:defaultValue="@string/pref_max_channel_5G_def"
            android:summary="@string/pref_max_channel_5G_desc"
            android:title="@string/pref_max_channel_5G_title">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_recording">
        <EditTextPreference
            android:key="rec_samples"
            android:inputType="number"
            android:numeric="integer"
            android:defaultValue="@string/pref_rec_samples_def"
            android:summary="@string/pref_rec_samples_desc"
            android:title="@string/pref_rec_samples_title">
        </EditTextPreference>
        <ListPreference
            android:entryValues="@array/delay_values"
            android:entries="@array/delay_entries"
            android:key="rec_delay"
            android:defaultValue="@string/pref_rec_delay_def"
            android:summary="@string/pref_rec_delay_desc"
            android:title="@string/pref_rec_delay_title">
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>
