<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.woosh.wirelesscoverage.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/flag"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/ap_bssid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:text="@string/frag_scan_bssid"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ap_frequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/frag_scan_chanfr"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ap_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="end"
            android:text="@string/frag_scan_strength"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ap_capab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1.6"
            android:gravity="end"
            android:text="@string/frag_scan_apcapab"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>